--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Galagaps</title>
   </head>
-  <body id="app">
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <!-- built files will be auto injected -->
-  </body>
+  <body id="app"></body>
 </html>
